clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00076.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00076.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %12 = const 0 : s32i
                %13 = cast(int_to_bool) %12 : bool
                %14 = ternary %13 ? { : s32i
                        %19 = const 1 : s32i
                        yield %19
                } : {
                        %18 = const 0 : s32i
                        yield %18
                }
                %15 = cast(int_to_bool) %14 : bool
                if %15 {
                        %16 = const 1 : s32i
                        store %16, %0
                        %17 = load %0 : s32i
                        return %17
                }
                yield
        }
        scope {
                %4 = const 1 : s32i
                %5 = cast(int_to_bool) %4 : bool
                %6 = ternary %5 ? { : s32i
                        %11 = const 0 : s32i
                        yield %11
                } : {
                        %10 = const 1 : s32i
                        yield %10
                }
                %7 = cast(int_to_bool) %6 : bool
                if %7 {
                        %8 = const 2 : s32i
                        store %8, %0
                        %9 = load %0 : s32i
                        return %9
                }
                yield
        }
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
