clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00077.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00077.c" (c, x86_64-unknown-linux-gnu)
fn foo(%arg0: s32i*) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i*):
        %9 = alloca s32i*, "x", align 8
        %10 = alloca s32i, "__retval", align 4
        %11 = alloca s32i[100], "y", align 16
        %12 = alloca s32i*, "p", align 8
        store %arg0, %9
        %13 = const 2000 : s32i
        %14 = const 0 : s64i
        get_element
        store %13, %15, align 16
        scope {
                %46 = const 0 : s64i
                %47 = load %9 : s32i*, align 8
                ptr_stride
                %49 = load %48 : s32i, align 4
                %50 = const 1000 : s32i
                cmp
                if %51 {
                        %52 = const 1 : s32i
                        store %52, %10
                        %53 = load %10 : s32i
                        return %53
                }
                yield
        }
        %16 = load %9 : s32i*, align 8
        store %16, %12, align 8
        scope {
                %38 = const 0 : s64i
                %39 = load %12 : s32i*, align 8
                ptr_stride
                %41 = load %40 : s32i, align 4
                %42 = const 1000 : s32i
                cmp
                if %43 {
                        %44 = const 2 : s32i
                        store %44, %10
                        %45 = load %10 : s32i
                        return %45
                }
                yield
        }
        %17 = cast(array_to_ptrdecay) %11 : s32i*
        store %17, %12, align 8
        scope {
                %30 = const 0 : s64i
                %31 = load %12 : s32i*, align 8
                ptr_stride
                %33 = load %32 : s32i, align 4
                %34 = const 2000 : s32i
                cmp
                if %35 {
                        %36 = const 3 : s32i
                        store %36, %10
                        %37 = load %10 : s32i
                        return %37
                }
                yield
        }
        scope {
                %25 = const 8 : u64i
                %26 = const 8 : u64i
                cmp
                if %27 {
                        %28 = const 4 : s32i
                        store %28, %10
                        %29 = load %10 : s32i
                        return %29
                }
                yield
        }
        scope {
                %20 = const 400 : u64i
                %21 = const 8 : u64i
                cmp
                if %22 {
                        %23 = const 5 : s32i
                        store %23, %10
                        %24 = load %10 : s32i
                        return %24
                }
                yield
        }
        %18 = const 0 : s32i
        store %18, %10
        %19 = load %10 : s32i
        return %19
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i[100], "x", align 16
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 1000 : s32i
        %4 = const 0 : s64i
        get_element
        store %3, %5, align 16
        %6 = cast(array_to_ptrdecay) %1 : s32i*
        %7 = call @foo(%6) : s32i [all]
        store %7, %0
        %8 = load %0 : s32i
        return %8
}
