clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00081.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00081.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s64i, "x", align 8
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 0 : s64i
        store %3, %1, align 8
        %4 = load %1 : s64i, align 8
        %5 = const 1 : s64i
        %6 = add %4, %5 : s64i [nsw]
        store %6, %1, align 8
        scope {
                %9 = load %1 : s64i, align 8
                %10 = const 1 : s64i
                cmp
                if %11 {
                        %12 = const 1 : s32i
                        store %12, %0
                        %13 = load %0 : s32i
                        return %13
                }
                yield
        }
        %7 = const 0 : s32i
        store %7, %0
        %8 = load %0 : s32i
        return %8
}
