clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00084.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00084.c" (c, x86_64-unknown-linux-gnu)
fn none() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %72 = alloca s32i, "__retval", align 4
        %73 = const 0 : s32i
        store %73, %72
        %74 = load %72 : s32i
        return %74
}
fn one(%arg5: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg5: s32i):
        %63 = alloca s32i, "a", align 4
        %64 = alloca s32i, "__retval", align 4
        store %arg5, %63
        scope {
                %67 = load %63 : s32i, align 4
                %68 = const 1 : s32i
                cmp
                if %69 {
                        %70 = const 1 : s32i
                        store %70, %64
                        %71 = load %64 : s32i
                        return %71
                }
                yield
        }
        %65 = const 0 : s32i
        store %65, %64
        %66 = load %64 : s32i
        return %66
}
fn two(%arg3: s32i, %arg4: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg3: s32i, %arg4: s32i):
        %48 = alloca s32i, "a", align 4
        %49 = alloca s32i, "b", align 4
        %50 = alloca s32i, "__retval", align 4
        store %arg3, %48
        store %arg4, %49
        scope {
                %58 = load %48 : s32i, align 4
                %59 = const 1 : s32i
                cmp
                if %60 {
                        %61 = const 1 : s32i
                        store %61, %50
                        %62 = load %50 : s32i
                        return %62
                }
                yield
        }
        scope {
                %53 = load %49 : s32i, align 4
                %54 = const 2 : s32i
                cmp
                if %55 {
                        %56 = const 1 : s32i
                        store %56, %50
                        %57 = load %50 : s32i
                        return %57
                }
                yield
        }
        %51 = const 0 : s32i
        store %51, %50
        %52 = load %50 : s32i
        return %52
}
fn three(%arg0: s32i, %arg1: s32i, %arg2: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i, %arg2: s32i):
        %27 = alloca s32i, "a", align 4
        %28 = alloca s32i, "b", align 4
        %29 = alloca s32i, "c", align 4
        %30 = alloca s32i, "__retval", align 4
        store %arg0, %27
        store %arg1, %28
        store %arg2, %29
        scope {
                %43 = load %27 : s32i, align 4
                %44 = const 1 : s32i
                cmp
                if %45 {
                        %46 = const 1 : s32i
                        store %46, %30
                        %47 = load %30 : s32i
                        return %47
                }
                yield
        }
        scope {
                %38 = load %28 : s32i, align 4
                %39 = const 2 : s32i
                cmp
                if %40 {
                        %41 = const 1 : s32i
                        store %41, %30
                        %42 = load %30 : s32i
                        return %42
                }
                yield
        }
        scope {
                %33 = load %29 : s32i, align 4
                %34 = const 3 : s32i
                cmp
                if %35 {
                        %36 = const 1 : s32i
                        store %36, %30
                        %37 = load %30 : s32i
                        return %37
                }
                yield
        }
        %31 = const 0 : s32i
        store %31, %30
        %32 = load %30 : s32i
        return %32
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %22 = get_global @none : () -> s32i*
                %23 = call @none() : s32i [all]
                %24 = cast(int_to_bool) %23 : bool
                if %24 {
                        %25 = const 1 : s32i
                        store %25, %0
                        %26 = load %0 : s32i
                        return %26
                }
                yield
        }
        scope {
                %17 = const 1 : s32i
                %18 = call @one(%17) : s32i [all]
                %19 = cast(int_to_bool) %18 : bool
                if %19 {
                        %20 = const 2 : s32i
                        store %20, %0
                        %21 = load %0 : s32i
                        return %21
                }
                yield
        }
        scope {
                %11 = const 1 : s32i
                %12 = const 2 : s32i
                %13 = call @two(%11, %12) : s32i [all]
                %14 = cast(int_to_bool) %13 : bool
                if %14 {
                        %15 = const 3 : s32i
                        store %15, %0
                        %16 = load %0 : s32i
                        return %16
                }
                yield
        }
        scope {
                %4 = const 1 : s32i
                %5 = const 2 : s32i
                %6 = const 3 : s32i
                %7 = call @three(%4, %5, %6) : s32i [all]
                %8 = cast(int_to_bool) %7 : bool
                if %8 {
                        %9 = const 4 : s32i
                        store %9, %0
                        %10 = load %0 : s32i
                        return %10
                }
                yield
        }
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
